test/compile-fail/find-file/duplicate-module-files-io-error1/expected.txt
error: file not found for module `a`
 --> top.rhdl:1:0
  |
1 | mod a;
  | ^^^^^^ ./test/compile-fail/find-file/duplicate-module-files-io-error1/a.rhdl : Permission denied (os error 13)
error: could not parse file
 --> a/mod.rhdl
  | expected `!`
